[package]
name = "program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10.2"
borsh-derive = "0.10.2"
solana-program = "1.16"
spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="2.1.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"

[lib]
crate-type = ["cdylib", "lib"]